gcc/testsuite/rust/rustc/ui/parser/use-as-where-use-ends-with-mod-sep.rs
use std::any:: as foo; // { dg-error "" "" { target *-*-* } }
// { dg-error "" "" { target *-*-* } .-1 }

